--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: Blogs with jekyll
 author: Anandha Marthandan
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My simple blog site using jekyll
 
 # social links
 twitter_username: twitter-handle
